<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <variable
            name="detailsScope"
            type="ghar.dfw.perm.nyschools.ui.viewmodel.SchoolsViewModel" />
    </data>

<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context=".nyschools.ui.views.DetailsFragment">

    <LinearLayout
        android:id="@+id/mLinearLayoutContainerSubItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical"
        android:padding="16dp"
        android:paddingTop="25dp"

        android:paddingBottom="25dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/mTextViewCriticalReadingAvgScoreLabel"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:paddingEnd="16dp"
                android:text="@string/reading"
                android:textColor="#555"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/mTextViewCriticalReadingAvgScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:text="@string/some_other_text"
                android:textColor="#555" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/mTextViewMathAvgScoreLabel"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:paddingEnd="16dp"
                android:text="@string/math"
                android:textColor="#555"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/mTextViewMathAvgScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:text="@string/some_other_text"
                android:textColor="#555" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/mTextViewWritingAvgScoreLabel"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:paddingEnd="16dp"
                android:text="@string/writing"
                android:textColor="#555"
                tools:ignore="RtlSymmetry" />
            <TextView
                android:id="@+id/mTextViewWritingAvgScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/some_other_text"
                android:visibility="gone"
                android:textColor="#555" />
        </LinearLayout>

    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>

</layout>
