<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/mTextViewSchoolName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/some_text"
                    android:textColor="#000"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/mLinearLayoutContainerSubItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp"
                android:paddingTop="25dp"
                android:paddingBottom="25dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/mTextViewCriticalReadingAvgScoreLabel"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:paddingEnd="16dp"
                        android:text="@string/reading"
                        android:textColor="#555"
                        tools:ignore="RtlSymmetry" />

                    <TextView
                        android:id="@+id/mTextViewCriticalReadingAvgScore"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        android:text="@string/some_other_text"
                        android:textColor="#555" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/mTextViewMathAvgScoreLabel"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:paddingEnd="16dp"
                        android:text="@string/math"
                        android:textColor="#555"
                        tools:ignore="RtlSymmetry" />

                    <TextView
                        android:id="@+id/mTextViewMathAvgScore"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        android:text="@string/some_other_text"
                        android:textColor="#555" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/mTextViewWritingAvgScoreLabel"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:paddingEnd="16dp"
                        android:text="@string/writing"
                        android:textColor="#555"
                        tools:ignore="RtlSymmetry" />
                    <TextView
                        android:id="@+id/mTextViewWritingAvgScore"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/some_other_text"
                        android:visibility="gone"
                        android:textColor="#555" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>